[yulin] feat: add a CSS for `cardButtonRecordChanges.html`

--- a/src/html/cardButtonRecordChanges.html
+++ b/src/html/cardButtonRecordChanges.html
@@ -2,11 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../styles/card-button.css">
 </head>
 <body>
-<div>total changes</div>
-<div>button1</div>
-<div>button2</div>
+<div class="container">
+    <div>total changes</div>
+    <div class="button-container">
+        <div class="button">button1</div>
+        <div class="button">button2</div>
+    </div>
+</div>
+
 <script src="https://p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
 <script src="../js/cardButtonRecordChanges.js"></script>
 </body>
