[yangyang] feat: add click button function

--- a/src/html/cardButtonRecordChanges.html
+++ b/src/html/cardButtonRecordChanges.html
@@ -8,8 +8,8 @@
 <div class="container">
     <div>total changes</div>
     <div class="button-container">
-        <div class="button">button1</div>
-        <div class="button">button2</div>
+        <button class="button" onclick="onRecordBtnClick()">Record</button>
+        <button class="button" onclick="onSaveBtnClick()">Save</button>
     </div>
 </div>
 
