--- a/src/html/cardButtonRecordChanges.html
+++ b/src/html/cardButtonRecordChanges.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="container">
-    <div>total changes</div>
+    <div id="demandChangeCount">total changes:</div>
     <div class="button-container">
         <button class="button" onclick="onRecordBtnClick()">Record</button>
         <button class="button" onclick="onSaveBtnClick()">Save</button>
