--- a/src/html/cardButtonRecordChanges.html
+++ b/src/html/cardButtonRecordChanges.html
@@ -8,8 +8,8 @@
 <div class="container">
     <div id="requirementChangeCount">Total Changes:</div>
     <div class="button-container">
-        <button class="button" onclick="onRecordBtnClick()">Record</button>
-        <button class="button" onclick="onSaveBtnClick()">Save</button>
+        <button class="button left" onclick="onRecordBtnClick()">Record</button>
+        <button class="button right" onclick="onSaveBtnClick()">Save</button>
     </div>
 </div>
 
