[jinxin] feat: #36 save description to database and update version info when save button clicked

--- a/src/html/cardButtonRecordChanges.html
+++ b/src/html/cardButtonRecordChanges.html
@@ -11,6 +11,8 @@
         <button class="button left" onclick="onRecordBtnClick()">Record</button>
         <button class="button right" onclick="onSaveBtnClick()">Save</button>
     </div>
+    <div>version record</div>
+    <div id="versionRecord"></div>
 </div>
 
 <script src="https://p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
