[yangyang] feat: #37 popup madal show desc diff

--- a/src/html/cardButtonRecordChanges.html
+++ b/src/html/cardButtonRecordChanges.html
@@ -11,7 +11,7 @@
         <button class="button left" onclick="onRecordBtnClick()">Record</button>
         <button class="button right" onclick="onSaveBtnClick()">Save</button>
     </div>
-    <div>version record</div>
+    <div onclick="onDiffBtnClick()">version record</div>
     <div id="versionRecord"></div>
 </div>
 
