[yulin] #5 feat: add `requirementChangeAnalysis` page

--- a/src/html/requirementChangeAnalysis.html
+++ b/src/html/requirementChangeAnalysis.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 <div style="align-content: center">
-    <div style="font-size: 14px">下个迭代，敬请期待...</div>
+    <h1>Requirement Change Statistics</h1>
+    <div id="charts" style="width:600px; height: 400px;">it is for echarts</div>
+    <div id="histogram" style="width:600px; height: 400px;">it is for echarts</div>
 </div>
 
 <script src="https://p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
-<script src="../js/cardButtonRecordChanges.js"></script>
+<script src="../js/requirementChangeAnalysis.js"></script>
 </body>
 </html>
