[yulin] #5 feat: delete the useless sentence and install `echarts` and `moment`

--- a/src/html/requirementChangeAnalysis.html
+++ b/src/html/requirementChangeAnalysis.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div style="align-content: center">
-    <h1>Requirement Change Statistics</h1>
+    <h1 style="align-content: center">Requirement Change Statistics</h1>
     <div id="charts" style="width:600px; height: 400px;">it is for echarts</div>
     <div id="histogram" style="width:600px; height: 400px;">it is for echarts</div>
 </div>
