[yulin] #5 feat: adjust the style and make modal fullscreen

--- a/src/html/requirementChangeAnalysis.html
+++ b/src/html/requirementChangeAnalysis.html
@@ -5,10 +5,13 @@
     <link rel="stylesheet" href="../styles/card-button.css">
 </head>
 <body>
-<div style="align-content: center">
+<div style="display:flex;flex-direction: column; align-items:center;">
     <h1 style="text-align: center">Requirement Change Statistics</h1>
-    <div id="charts" style="width:600px; height: 400px;">it is for echarts</div>
-    <div id="histogram" style="width:600px; height: 400px;">it is for echarts</div>
+    <div style="display:flex; justify-content:center;">
+        <button onclick="startAnalysis()">start analysis</button>
+    </div>
+    <div id="charts" style="width:600px; height: 400px; margin: 20px 0 0 0;">it is for echarts</div>
+    <div id="histogram" style="width:600px; height: 400px; margin: 20px 0 0 0;">it is for echarts</div>
 </div>
 
 <script src="https://p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
