--- a/src/html/lastDescDiff.html
+++ b/src/html/lastDescDiff.html
@@ -18,7 +18,7 @@
     t.get(context.card, 'shared', 'diff').then(function (diff) {
         console.log('diff in html', diff);
         if(diff === '' || diff === undefined || diff === null){
-            document.getElementById("display").innerHTML = "描述未更改！";
+            document.getElementById("desc").innerHTML = "描述未更改！";
         }
         const display = document.getElementById('display');
         const fragment = document.createDocumentFragment();
