--- a/src/html/versionComparisons.html
+++ b/src/html/versionComparisons.html
@@ -15,31 +15,32 @@
     const t = window.TrelloPowerUp.iframe();
     const context = t.getContext();
     let span = null;
-    t.get(context.card, 'shared', 'versionDiff').then(function (versionDiff) {
-        console.log('versionDiff in html', versionDiff);
-        // if(diff === '' || diff === undefined || diff === null){
-        //     document.getElementById("display").innerHTML = "描述未更改！";
-        // }
-        const display = document.getElementById('display');
-        const fragment = document.createDocumentFragment();
-        versionDiff.forEach((part) => {
-            if (part.added) {
-                color = 'green';
-                span = document.createElement('ins');
-            } else if (part.removed) {
-                color = 'red';
-                span = document.createElement('del');
-            } else {
-                color = '#172b4d'
-                span = document.createElement('span');
-            }
-            span.style.color = color;
-            span.appendChild(document
-                .createTextNode(part.value));
-            fragment.appendChild(span);
-        });
-        display.appendChild(fragment);
-    })
+
+    const diff = t.arg('text');
+    if(diff === '' || diff === undefined || diff === null){
+        document.getElementById("display").innerHTML = "描述未更改！";
+    }
+
+    const display = document.getElementById('display');
+    const fragment = document.createDocumentFragment();
+    diff.forEach((part) => {
+        if (part.added) {
+            color = 'green';
+            span = document.createElement('ins');
+        } else if (part.removed) {
+            color = 'red';
+            span = document.createElement('del');
+        } else {
+            color = '#172b4d'
+            span = document.createElement('span');
+        }
+        span.style.color = color;
+        span.appendChild(document
+            .createTextNode(part.value));
+        fragment.appendChild(span);
+    });
+    display.appendChild(fragment);
+
     t.get(context.card, 'shared', 'savedTime').then(function (time) {
         console.log('time in html: ', time);
         const date = document.getElementById('date');
