[jinxin] feat: #37 version comparison using database

--- a/src/html/versionComparisons.html
+++ b/src/html/versionComparisons.html
@@ -41,11 +41,11 @@
     });
     display.appendChild(fragment);
 
-    t.get(context.card, 'shared', 'savedTime').then(function (time) {
-        console.log('time in html: ', time);
-        const date = document.getElementById('date');
-        date.innerHTML = time;
-    })
+    // t.get(context.card, 'shared', 'savedTime').then(function (time) {
+    //     console.log('time in html: ', time);
+    //     const date = document.getElementById('date');
+    //     date.innerHTML = time;
+    // })
 </script>
 </body>
 </html>
