--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div style="display:flex;flex-direction: column; align-items:center;">
-    <h1 style="text-align: center">Requirement Change Statistics</h1>
+    <h1 style="text-align: center">Requirement Changes Statistics</h1>
     <div style="display:flex; justify-content:center;">
         <button onclick="startAnalysis()">start analysis</button>
     </div>
