--- a/src/html/versionComparisons.html
+++ b/src/html/versionComparisons.html
@@ -17,6 +17,7 @@
     let span = null;
 
     const diff = t.arg('text');
+    const time = t.arg('savedTime');
     if (diff === '' || diff === undefined || diff === null) {
         document.getElementById("display").innerHTML = "描述未更改！";
     }
@@ -41,11 +42,7 @@
     });
     display.appendChild(fragment);
 
-    // t.get(context.card, 'shared', 'savedTime').then(function (time) {
-    //     console.log('time in html: ', time);
-    //     const date = document.getElementById('date');
-    //     date.innerHTML = time;
-    // })
+    document.getElementById('date').innerHTML = `最后更改时间：${time}`;
 </script>
 </body>
 </html>
