--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -2,18 +2,56 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../styles/card-button.css">
+    <link rel="stylesheet" type="text/css" href="../styles/requirementChangeAnalysis.css">
 </head>
 <body>
-<div style="display:flex;flex-direction: column; align-items:center;">
-    <h1 style="text-align: center">Requirement Changes Statistics</h1>
-    <div style="display:flex; justify-content:center;">
-        <button onclick="startAnalysis()">start analysis</button>
+<div class="container">
+    <div class="title-area" style="width:900px; margin: 40px 0 0 0">Requirement Changes Statistics</div>
+    <div id="charts" style="width:900px; height: 600px; margin: 40px 0 0 0;">its for pie
+        chart
     </div>
-    <div id="charts" style="width:900px; height: 600px; margin: 40px 0 0 0;">it is for echarts</div>
-    <div id="histogram" style="width:900px; height: 600px; margin: 20px 0 0 0;">it is for echarts</div>
+    <div id="histogram-desc" style="width:900px; height: 260px; margin: 40px 0 0 0;">
+        <div class="title-area">Requirement Changes Statistics</div>
+        <div class="description-area">
+            <div class="text-area">
+                <div>此图表可以展示在某一个周期内需求变更的总次数和总卡数，您可以通过调整日期和周期查看不同时间周期内的数据统计和对比结果。</div>
+                <br/>
+                <div> This chart can display the total number of requirement changes and the total number of cards in a
+                    certain period. You can view the statistics and comparison results in different time periods by
+                    adjusting the date and period.
+                </div>
+            </div>
+            <div class="legend-area">
+                <div class="legend-block">
+                    <div style="height: 15px; width: 15px; border: 3px; background-color: #d3f998;"></div>
+                    <div style="width: 200px; padding-left: 5px">card numbers</div>
+                </div>
+                <div class="legend-block">
+                    <div style="height: 15px; width: 15px; border: 3px; background-color: #59c276;"></div>
+                    <div style="width: 200px; padding-left: 5px">requirement changes times</div>
+                </div>
+            </div>
+        </div>
+        <div class="param-setting-area">
+            <div class="param-setting-area-block" style="padding: 0 0 0 15px">
+                <label class="param-setting-area-block-text" for="start-date">Start Time:</label>
+                <input class="param-setting-area-data-picker-block" id="start-date" type="date">
+            </div>
+            <div class="param-setting-area-block">
+                <label class="param-setting-area-block-text" for="end-date">End Time:</label>
+                <input class="param-setting-area-data-picker-block" id="end-date" type="date">
+            </div>
+            <div class="param-setting-area-block">
+                <label class="param-setting-area-block-text" for="period">Period:</label>
+                <input onkeyup="this.value=this.value.replace(/\D/g,'')" class="param-setting-area-data-picker-block" id="period" type="text" placeholder="请输入天数">
+            </div>
+            <div class="param-setting-area-block" style="padding: 0 0 0 15px;">
+                <button onclick="onConfirm()">confirm</button>
+            </div>
+        </div>
+    </div>
+    <div id="histogram" style="width:900px; height: 600px; margin: 20px 0 0 0;">its for histogram</div>
 </div>
-
 <script src="https://p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
 <script src="../js/requirementChangeAnalysis.js"></script>
 </body>
