--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../styles/requirementChangeAnalysis.css">
+    <link rel="stylesheet" href="../styles/board-version-record.css">
 </head>
 <body>
 <div class="container">
@@ -49,8 +50,65 @@
         </div>
     </div>
     <div id="histogram" style="width:900px; height: 600px; margin: 20px 0 0 0;">its for histogram</div>
+    <table class="table" id="table">
+        <caption>Story List</caption>
+        <tr>
+            <th>Label</th>
+            <th>Title</th>
+            <th>Last Time</th>
+            <th>Version Record</th>
+        </tr>
+    </table>
 </div>
 <script src="https://p.trellocdn.com/power-up.min.js" crossorigin="anonymous"></script>
 <script src="../js/requirementChangeAnalysis.js"></script>
+<script src="../js/requirementChangesLists.js"></script>
+<script>
+    const t = window.TrelloPowerUp.iframe();
+    let tr = null;
+    let labelTd = null;
+    let titleTd = null;
+    let lastTimeTd = null;
+    let versionRecordTd = null;
+
+    const cardsVersionRecordInfo = t.arg('cardsVersionRecordInfo');
+    console.log("cardsVersionRecordInfo in html: ", cardsVersionRecordInfo);
+
+    const table = document.getElementById('table');
+    const fragment = document.createDocumentFragment();
+
+    cardsVersionRecordInfo.forEach((card) => {
+        tr = document.createElement('tr');
+        let labelSet = card.labels.filter(label => label.name !== '');
+        console.log('card labels after filter: ', labelSet);
+        let labelNameSet = [];
+        labelSet.forEach(label => labelNameSet.push(label.name));
+        console.log('card labels after filter: ', labelNameSet);
+
+        labelTd = document.createElement('td');
+        labelTd.appendChild(document.createTextNode(labelNameSet));
+        tr.appendChild(labelTd);
+
+        titleTd = document.createElement('td');
+        titleTd.appendChild(document.createTextNode(card.name));
+        tr.appendChild(titleTd);
+
+        lastTimeTd = document.createElement('td');
+        lastTimeTd.appendChild(document.createTextNode(card.lastTime));
+        tr.appendChild(lastTimeTd);
+
+        versionRecordTd = document.createElement('td');
+        let span = null;
+        card.versionList.forEach(versionText => {
+            span = document.createElement('span');
+            span.onclick = ()=>onVersionBoardBtnCLick(versionText, card.id);
+            span.appendChild(document.createTextNode(`${versionText};`));
+            versionRecordTd.appendChild(span);
+        })
+        tr.appendChild(versionRecordTd);
+        fragment.appendChild(tr);
+    });
+    table.appendChild(fragment);
+</script>
 </body>
 </html>
