[yangyang] feat: #35 add table css

--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -51,7 +51,7 @@
     </div>
     <div id="histogram" style="width:900px; height: 600px; margin: 20px 0 0 0;">its for histogram</div>
     <table class="table" id="table">
-        <caption>Story List</caption>
+        <caption style="justify-content: center;font-size: 38px;">Story List</caption>
         <tr>
             <th>Label</th>
             <th>Title</th>
