--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -7,15 +7,21 @@
 </head>
 <body>
 <div class="container">
-    <div class="title-area" style="width:900px; margin: 40px 0 0 0">Total Number of Requirement Changes by Labels</div>
-    <div id="charts" style="width:900px; height: 600px; margin: 40px 0 0 0;">its for pie
-        chart
+    <div class="pies-container">
+        <div class="single-pie">
+            <div class="title-area" style="width:450px; margin: 40px 0 0 0;">Total Requirement Changes by Labels</div>
+            <div id="charts" style="width:600px; height: 500px; margin: 40px 0 0 0; background-color: #dddddd">its for pie chart</div>
+        </div>
+        <div class="single-pie">
+            <div class="title-area" style="width:450px; margin: 40px 0 0 0">Total Requirement Changes by Lists</div>
+            <div id="charts-by-list" style="width:600px; height: 500px; margin: 40px 0 0 0; background-color: #dddddd">its for pie chart</div>
+        </div>
     </div>
-    <div id="histogram-desc" style="width:900px; height: 260px; margin: 40px 0 0 0;">
+    <div id="histogram-desc" style="width:1000px; height: 260px; margin: 40px 0 0 0;">
         <div class="title-area">Requirement Changes Statistics</div>
         <div class="description-area">
             <div class="text-area">
-                <div> This chart can display the total number of requirement changes and the total number of cards in a
+                <div>This chart can display the total number of requirement changes and the total number of cards in a
                     certain period. You can view the statistics and comparison results in different time periods by
                     adjusting the date and period.
                 </div>
@@ -42,14 +48,15 @@
             </div>
             <div class="param-setting-area-block">
                 <label class="param-setting-area-block-text" for="period">Period:</label>
-                <input onkeyup="this.value=this.value.replace(/\D/g,'')" class="param-setting-area-data-picker-block" id="period" type="text" placeholder="请输入天数">
+                <input onkeyup="this.value=this.value.replace(/\D/g,'')" class="param-setting-area-data-picker-block"
+                       id="period" type="text" placeholder="请输入天数">
             </div>
             <div class="param-setting-area-block" style="padding: 0 0 0 15px;">
                 <button onclick="onConfirm()">confirm</button>
             </div>
         </div>
     </div>
-    <div id="histogram" style="width:900px; height: 600px; margin: 20px 0 0 0;">its for histogram</div>
+    <div id="histogram" style="width:1000px; height: 600px; margin: 20px 0 0 0;">its for histogram</div>
     <table class="table" id="table">
         <caption style="justify-content: center;font-size: 38px;">Story List</caption>
         <tr>
