--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -8,17 +8,17 @@
 <body>
 <div class="container">
     <div class="pies-container">
-        <div class="single-pie">
-            <div class="title-area" style="width:450px; margin: 40px 0 0 0;">Total Requirement Changes by Labels</div>
-            <div id="charts" style="width:600px; height: 500px; margin: 40px 0 0 0; background-color: #dddddd">its for pie chart</div>
+        <div class="single-pie" style="margin-right: 5px; background-color: #dddddd; border-radius: 8px;">
+            <div class="title-area" style="width: 600px; padding: 40px 0 0 0;">Total Requirement Changes by Labels</div>
+            <div id="charts" style="width:600px; height: 500px; padding: 40px 0 0 0;">its for pie chart</div>
         </div>
-        <div class="single-pie">
-            <div class="title-area" style="width:450px; margin: 40px 0 0 0">Total Requirement Changes by Lists</div>
-            <div id="charts-by-list" style="width:600px; height: 500px; margin: 40px 0 0 0; background-color: #dddddd">its for pie chart</div>
+        <div class="single-pie" style="margin-left: 5px; background-color: #dddddd; border-radius: 8px;">
+            <div class="title-area" style="width: 600px; padding: 40px 0 0 0;">Total Requirement Changes by Lists</div>
+            <div id="charts-by-list" style="width:600px; height: 500px; padding: 40px 0 0 0;">its for pie chart</div>
         </div>
     </div>
     <div id="histogram-desc" style="width:1000px; height: 260px; margin: 40px 0 0 0;">
-        <div class="title-area">Requirement Changes Statistics</div>
+        <div class="title-area" style="font-size: 48px;">Requirement Changes Statistics</div>
         <div class="description-area">
             <div class="text-area">
                 <div>This chart can display the total number of requirement changes and the total number of cards in a
