[yulin] #5 feat: add a vertical line

--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -8,16 +8,16 @@
 <body>
 <div class="container">
     <div class="pies-container">
-        <div class="single-pie" style="margin-right: 10px; background-color: #eeeeee; border-radius: 18px;">
+        <div class="single-pie" style="margin-right: 0; background-color: #fff;">
             <div class="title-area" style="width: 600px; padding: 40px 0 0 0;">Total Requirement Changes by Labels</div>
             <div id="charts" style="width:600px; height: 500px; padding: 40px 0 0 0;">its for pie chart</div>
         </div>
-        <div class="single-pie" style="margin-left: 10px; background-color: #eeeeee; border-radius: 18px;">
+        <div class="single-pie" style="background-color: #fff;">
             <div class="title-area" style="width: 600px; padding: 40px 0 0 0;">Total Requirement Changes by Lists</div>
-            <div id="charts-by-list" style="width:600px; height: 500px; padding: 40px 0 0 0;">its for pie chart</div>
+            <div id="charts-by-list" style="width:600px; height: 500px; padding: 40px 0 0 0; border-left:1px solid #000;">its for pie chart</div>
         </div>
     </div>
-    <div style="margin-top: 20px;background-color: #eeeeee; border-radius: 18px;">
+    <div style="margin-top: 20px;">
         <div id="histogram-desc" style="width:1000px; height: 260px; margin: 40px 0 0 0;">
             <div class="title-area" style="font-size: 48px;">Requirement Changes Statistics</div>
             <div class="description-area">
