[yulin] #5 feat: change the placeholder to english

--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -50,7 +50,7 @@
                 <div class="param-setting-area-block">
                     <label class="param-setting-area-block-text" for="period">Period:</label>
                     <input onkeyup="this.value=this.value.replace(/\D/g,'')" class="param-setting-area-data-picker-block"
-                           id="period" type="text" placeholder="请输入天数">
+                           id="period" type="text" placeholder="Number of days">
                 </div>
                 <div class="param-setting-area-block" style="padding: 0 0 0 15px;">
                     <button onclick="onConfirm()">confirm</button>
