--- a/src/html/cardButtonRecordChanges.html
+++ b/src/html/cardButtonRecordChanges.html
@@ -11,7 +11,7 @@
         <button class="button left" onclick="onRecordBtnClick()">Record</button>
         <button class="button right" onclick="onSaveBtnClick()">Save</button>
     </div>
-    <div>version record</div>
+    <div style="margin-left: 45px;">version record</div>
     <div id="versionRecord"></div>
 </div>
 
