--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -60,7 +60,7 @@
         <div id="histogram" style="width:1000px; height: 600px; margin: 20px 0 0 0;">its for histogram</div>
     </div>
     <table class="table" id="table">
-        <caption style="justify-content: center;font-size: 38px;">Story List</caption>
+        <caption style="justify-content: center;font-size: 38px;">Requirement Changes Story List</caption>
         <tr>
             <th>Label</th>
             <th>Title</th>
