[yangyang] feat: #35 change ip to localhost

--- a/src/html/requirementChangesAnalysis.html
+++ b/src/html/requirementChangesAnalysis.html
@@ -59,7 +59,7 @@
         </div>
         <div id="histogram" style="width:1000px; height: 600px; margin: 20px 0 0 0;">its for histogram</div>
     </div>
-    <div id="caption" style="justify-content: center;font-size: 38px;">Requirement Changes Story List</div>
+    <div id="caption" style="justify-content: center;font-size: 38px;margin: 50px 0 20px 0;">Requirement Changes Story List</div>
     <table class="table" id="table">
         <tr>
             <th>Label</th>
